[project]
name = "pxscraper"
version = "0.3.1"
description = "Query, filter, and retrieve proteomics dataset metadata from ProteomeXchange"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "LangeLab" },
]
keywords = ["proteomics", "proteomexchange", "PRIDE", "MassIVE", "mass-spectrometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28",
    "click>=8.0",
    "pandas>=2.1",
    "lxml>=5.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
pxscraper = "pxscraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pxscraper"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
